Update to 3.0.0-RC4 and update formats

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,12 +1,22 @@
-version = 3.0.0-RC3
+# Overall we are trying to use default settings to the
+# maximum extent possible. Removing non-default
+# settings is preferred over adding especially as
+# the Scala language evolves and styles change.
+# Test upgrades: $ scripts/scalafmt --test 2> diff.txt
+version = "3.0.0-RC5"
 docstrings.style = AsteriskSpace
 project.git = true
 project.excludePaths = [
   "glob:**/scalalib/**"
 ]
-# this creates less of a diff but is not default
-# but aligned with Scala.js syntax
+# This creates less of a diff but is not default
+# but is more aligned with Scala.js syntax.
 newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
+
+# Keep control sites more streamlined
+indent.ctrlSite = 4
+danglingParentheses.ctrlSite = false
+
 # default value is 10,000
 # Message about NirGenExpr.scala goes away between 18k and 20k
 runner.optimizer.maxVisitsPerToken = 20000
