--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -40,6 +40,31 @@ jobs:
       - name: Test tools
         run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" test-tools
 
+        # Make sure that Scala partest blacklisted tests contain only valid test names
+      - name: Setup Ammonite
+        uses: yilinwei/setup-ammonite@0.1.0
+        with:
+          ammonite-version: 2.3.8
+          scala-version: 2.13
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+
+      - name: Check partest disabled tests list
+        run: |
+          sbt "++ ${{ matrix.scala }} -v" \
+          "-no-colors" \
+          "scalaPartest/fetchScalaSource"
+          amm scripts/partest-check-files.sc ${{ matrix.scala }}
+
+        # Running all partests would take ~2h for each Scala version, run only single test of each kind
+        # to make sure that infrastructure works correctly.
+      - name: Run subset of partest tests
+        run: |
+          sbt "++ ${{ matrix.scala }} -v" \
+          "-no-colors" \
+          "-J-Xmx3G" \
+          "scalaPartestTests/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
+
   # Build testing image that would be used to build and run against different platforms
   # Currently only Linux x64 is tested
   build-image:
