Allow to run unit-tests infrastructure on Windows (#2287)
This PR continues topic of Scala Native support for Windows. It adds platform-specific compact layer for java.net Sockets allowing to execute unit tests. It also adds proper implementation for required java.io methods. To limit the number of changes currently only smaller subset of tests testsExt was added to CI

* Included testsExt tests in the CI
* Added minimal java.net implementation
* Added binding for time.h not POSIX compliment *_s methods used in Windows
* Added minimal java.io.File implementation required for tests
* Added bindings for required WinSock2 and FileAPI functions
* Fixed parsing symbols in Stacktrace on Windows
* Added -g to compilation and linking step on Windows to allow gathering stack traces.
* Fixed java.util.Date to compile on Windows

--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -81,8 +81,8 @@ jobs:
           $cSources | ForEach-Object {clang -std=gnu11 -c "$_"}
           $cppSources | ForEach-Object {clang++ -std=c++14 -c "$_"}
 
-  run-sandbox:
-    name: Run sandbox project
+  run-tests:
+    name: Run tests
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
@@ -121,8 +121,11 @@ jobs:
         run: clang --version
 
       - name: Run sandbox
-        # Set heap limits manually, there seams to be bug in detection of available memory
-        # which results in undefined behavior at runtime
         run: |
           sbt ++${{matrix.scala}};sandbox/run
+        shell: cmd
+
+      - name: Run testsExt tests
+        run: |
+          sbt ++${{matrix.scala}};testsExt/test
         shell: cmd
