Adjust CI script to run java.io tests, also run tests on the JVM

--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -133,6 +133,8 @@ jobs:
           set SCALANATIVE &
           sbt ++${{matrix.scala}}
           sandbox/run
-          "tests/testOnly javalib.math.* javalib.security.*"
+          "testsJVM/testOnly javalib.math.* javalib.security.* javalib.io.*"
+          "tests/testOnly javalib.math.* javalib.security.* javalib.io.*"
           testsExt/test
+          testsExtJVM/test
         shell: cmd
