Try install Rust on the CI

--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -40,6 +40,9 @@ RUN \
 
 RUN apt-get install -y clang-6.0 zlib1g-dev libgc-dev
 
+# Install Rust for integration tests
+RUN curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh 
+
 ENV LC_ALL "C.UTF-8"
 
 ENV LANG "C.UTF-8"
