Set custom pagefile limits in the CI

--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -92,6 +92,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # We need to set proper Pagefile limits in the advance. 
+      - name: Configure Pagefile
+        uses: al-cheb/configure-pagefile-action@v1.2
+        with:
+          minimum-size: 4GB
+          maximum-size: 16GB
+
       #Prepare environment, clang needs to be installed
       #Compilation on MSVC needs c++14 or higher and expects llvm 11.0.0 or newer
       #Cache commonly used files: Coursier, ivy cache
