--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -86,13 +86,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-2019 ]
-        scala: [ 2.13.6, 2.12.14, 2.11.12 ]
+        os: [windows-2019]
+        scala: [2.13.6, 2.12.14, 2.11.12]
         gc: [none, immix, commix]
     steps:
       - uses: actions/checkout@v2
 
-      # We need to set proper Pagefile limits in advance. 
+      # We need to set proper Pagefile limits in advance.
+      # Github actions default page file size is quite small,
+      # it's not enough to run all tests, especially when using None GC.
+      # We've observed that on Unix memory management is less strict,
+      # you can reserve more memory than it's physically possible.
+      # On Windows however you need to reserve/commit memory in advance -
+      # it does not matter whether it would be used or not, the amount of all
+      # reserved memory cannot exceed the amount of physically available storage.
       - name: Configure Pagefile
         uses: al-cheb/configure-pagefile-action@v1.2
         with:
