--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -86,11 +86,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-2019 ]
-        scala: [ 2.13.6, 2.12.14, 2.11.12 ]
+        os: [windows-2019]
+        scala: [2.13.6, 2.12.14, 2.11.12]
         gc: [none, immix, commix]
     steps:
       - uses: actions/checkout@v2
+
+      # We need to set proper Pagefile limits in advance.
+      # Github actions default page file size is quite small,
+      # it's not enough to run all tests, especially when using None GC.
+      # We've observed that on Unix memory management is less strict,
+      # you can reserve more memory than it's physically possible.
+      # On Windows however you need to reserve/commit memory in advance -
+      # it does not matter whether it would be used or not, the amount of all
+      # reserved memory cannot exceed the amount of physically available storage.
+      - name: Configure Pagefile
+        uses: al-cheb/configure-pagefile-action@v1.2
+        with:
+          minimum-size: 4GB
+          maximum-size: 16GB
 
       #Prepare environment, clang needs to be installed
       #Compilation on MSVC needs c++14 or higher and expects llvm 11.0.0 or newer
@@ -133,6 +147,8 @@ jobs:
           set SCALANATIVE &
           sbt ++${{matrix.scala}}
           sandbox/run
-          "tests/testOnly javalib.math.* javalib.security.*"
+          "testsJVM/testOnly javalib.math.* javalib.security.* javalib.io.*"
+          "tests/testOnly javalib.math.* javalib.security.* javalib.io.*"
           testsExt/test
+          testsExtJVM/test
         shell: cmd
