--- a/ci-docker/Dockerfile
+++ b/ci-docker/Dockerfile
@@ -52,4 +52,4 @@ USER scala-native
 
 WORKDIR /home/scala-native/scala-native
 
-CMD sbt "++ $SCALA_VERSION -v" -no-colors -J-Xmx5G "set sbtScalaNative/scriptedBufferLog := false" "set Global/parallelExecution := false" "$TEST_COMMAND"
+CMD sbt "++ $SCALA_VERSION -v" -no-colors -J-Xmx5G "set sbtScalaNative/scriptedBufferLog := false" "$TEST_COMMAND"
