--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -147,8 +147,8 @@ jobs:
           set SCALANATIVE &
           sbt ++${{matrix.scala}}
           sandbox/run
-          "testsJVM/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.nio.*"
-          "tests/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.nio.*"
+          "testsJVM/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.nio.* javalib.net.*"
+          "tests/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.nio.* javalib.net.*"
           testsExt/test
           testsExtJVM/test
         shell: cmd
