Implement `java.lang.ProcessBuilder` for Windows (#2360)
* Implementation of WindowsProcess
* Added bindings for used Windows API methods and structs
* Adjusted tests to allow for running tests on both Windows and JVM
* Fixed minor issues allowing to test whole java.lang package.

--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -147,8 +147,8 @@ jobs:
           set SCALANATIVE &
           sbt ++${{matrix.scala}}
           sandbox/run
-          "testsJVM/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.nio.*"
-          "tests/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.nio.*"
+          "testsJVM/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.lang.* javalib.nio.*"
+          "tests/testOnly javalib.math.* javalib.security.* javalib.io.* javalib.lang.* javalib.nio.*"
           testsExt/test
           testsExtJVM/test
         shell: cmd
