Use Scala 2.12.15 in the CI

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.13.6, 2.12.14, 2.11.12]
+        scala: [2.13.6, 2.12.15, 2.11.12]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -130,7 +130,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.13.6, 2.12.14, 2.11.12]
+        scala: [2.13.6, 2.12.15, 2.11.12]
         build-mode: [ debug , release-fast ]
         gc: [ boehm, immix, commix ]
         # Create holes in grid to lower number of tests.
@@ -139,7 +139,7 @@ jobs:
           - scala: 2.13.6
             build-mode: debug
             gc: immix
-          - scala: 2.12.14
+          - scala: 2.12.15
             build-mode: debug
             gc: immix
           - scala: 2.11.12
@@ -150,6 +150,12 @@ jobs:
             build-mode: debug
             gc: immix
           - scala: 2.12.13
+            build-mode: release-fast
+            gc: commix
+          - scala: 2.12.14
+            build-mode: debug
+            gc: immix
+          - scala: 2.12.14
             build-mode: release-fast
             gc: commix
           - scala: 2.13.4
@@ -205,7 +211,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [ 2.13.6, 2.12.14, 2.11.12 ]
+        scala: [ 2.13.6, 2.12.15, 2.11.12 ]
         build-mode: [ debug, release-fast ]
         include:
           - scala: 2.12.13
@@ -255,7 +261,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [2.12.14]
+        scala: [2.12.15]
     steps:
       - uses: actions/checkout@v2
       - name: Calculate binary version
