Add boehm GC to windows CI tests matrix

--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -87,8 +87,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        scala: [2.13.6, 2.12.14, 2.11.12]
-        gc: [none, immix, commix]
+        scala: [2.13.6, 2.12.15, 2.11.12]
+        gc: [none, boehm, immix, commix]
     steps:
       - uses: actions/checkout@v2
 
