--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -17,53 +17,10 @@ jobs:
         gc: [none, boehm, immix, commix]
     steps:
       - uses: actions/checkout@v2
-
-      # We need to set proper Pagefile limits in advance.
-      # Github actions default page file size is quite small,
-      # it's not enough to run all tests, especially when using None GC.
-      # We've observed that on Unix memory management is less strict,
-      # you can reserve more memory than it's physically possible.
-      # On Windows however you need to reserve/commit memory in advance -
-      # it does not matter whether it would be used or not, the amount of all
-      # reserved memory cannot exceed the amount of physically available storage.
-      - name: Configure Pagefile
-        uses: al-cheb/configure-pagefile-action@v1.2
+      - uses: ./.github/actions/windows-setup-env
+        id: setup
         with:
-          minimum-size: 4GB
-          maximum-size: 16GB
-
-      #Prepare environment, clang needs to be installed
-      #Compilation on MSVC needs c++14 or higher and expects llvm 11.0.0 or newer
-      #Cache commonly used files: Coursier, ivy cache
-      - name: Resolve env variables
-        id: resolve-env
-        run: |
-          echo "::set-output name=ProgramFiles::${env:ProgramFiles}"
-          echo "::set-output name=LocalAppData::${env:LocalAppData}"
-          echo "::set-output name=UserProfile::${env:UserProfile}"
-          echo "::set-output name=VcpkgLibs::${env:VCPKG_INSTALLATION_ROOT}\installed\x64-windows-static"
-
-      - name: Cache dependencies
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: |
-            ${{steps.resolve-env.outputs.ProgramFiles}}\LLVM\
-            ${{steps.resolve-env.outputs.LocalAppData}}\Coursier\Cache\v1\
-            ${{steps.resolve-env.outputs.UserProfile}}\.ivy2\cache
-          key: ${{ runner.os }}-${{ matrix.scala }}-deps
-      # Install LLVM in case if cache is missing
-      - name: Install LLVM
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: choco install llvm --version=11.0.0
-
-      - name: Add LLVM on Path
-        run: echo "${env:ProgramFiles}\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      - name: Assert clang installed and on path
-        run: clang --version
-
-      - name: Install libs
-        run: vcpkg install bdwgc zlib --triplet=x64-windows-static
+          scala-version: ${{matrix.scala}}
 
       # None GC takes too much memory on Windows to execute partest JUnit tests
       # leading to spurious failures in the CI. Perform subset of tests instead
@@ -71,8 +28,8 @@ jobs:
         if: matrix.gc == 'none'
         run: >
           set SCALANATIVE_GC=${{matrix.gc}}&
-          set SCALANATIVE_INCLUDE_DIRS=${{steps.resolve-env.outputs.VcpkgLibs}}\include&
-          set SCALANATIVE_LIB_DIRS=${{steps.resolve-env.outputs.VcpkgLibs}}\lib&
+          set SCALANATIVE_INCLUDE_DIRS=${{steps.setup.outputs.vcpkg-dir}}\include&
+          set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
           set SCALANATIVE &
           sbt ++${{matrix.scala}}
           sandbox/run
@@ -105,42 +62,49 @@ jobs:
         scala: [2.12.15]
     steps:
       - uses: actions/checkout@v2
-      - name: Configure Pagefile
-        uses: al-cheb/configure-pagefile-action@v1.2
+      - uses: ./.github/actions/windows-setup-env
         with:
-          minimum-size: 4GB
-          maximum-size: 16GB
-
-      #Prepare environment, clang needs to be installed
-      #Compilation on MSVC needs c++14 or higher and expects llvm 11.0.0 or newer
-      #Cache commonly used files: Coursier, ivy cache
-      - name: Resolve env variables
-        id: resolve-env
-        run: |
-          echo "::set-output name=ProgramFiles::${env:ProgramFiles}"
-          echo "::set-output name=LocalAppData::${env:LocalAppData}"
-          echo "::set-output name=UserProfile::${env:UserProfile}"
-
-      - name: Cache dependencies
-        id: cache-deps
-        uses: actions/cache@v2
-        with:
-          path: |
-            ${{steps.resolve-env.outputs.ProgramFiles}}\LLVM\
-            ${{steps.resolve-env.outputs.LocalAppData}}\Coursier\Cache\v1\
-            ${{steps.resolve-env.outputs.UserProfile}}\.ivy2\cache
-          key: ${{ runner.os }}-${{ matrix.scala }}-deps
-
-      # Install LLVM in case if cache is missing
-      - name: Install LLVM
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: choco install llvm --version=11.0.0
-
-      - name: Add LLVM on Path
-        run: echo "${env:ProgramFiles}\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      - name: Assert clang installed and on path
-        run: clang --version
+          scala-version: ${{matrix.scala}}
 
       - name: Test scripted
         run: sbt ++${{matrix.scala}};test-scripted
+        shell: cmd
+
+  test-runtime-lto:
+    name: Test runtime with LTO
+    runs-on: windows-2019
+    strategy:
+      fail-fast: false
+      matrix:
+        scala: [2.13.6, 2.12.15, 2.11.12]
+        build-mode: [release-fast]
+        lto: [thin]
+        optimize: [true]
+        include:
+          - scala: 2.13.6
+            lto: full
+            optimize: true
+          - scala: 2.12.15
+            lto: full
+            optimize: false
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/windows-setup-env
+        id: setup
+        with:
+          scala-version: ${{matrix.scala}}
+
+      - name: Test runtime
+        run: >
+          set SCALANATIVE_GC=immix&
+          set SCALANATIVE_MODE=release-fast&
+          set SCALANATIVE_OPTIMIZE=${{matrix.optimize}}&
+          set SCALANATIVE_LTO=${{matrix.lto}}&
+          set SCALANATIVE_INCLUDE_DIRS=${{steps.setup.outputs.vcpkg-dir}}\include&
+          set SCALANATIVE_LIB_DIRS=${{steps.setup.outputs.vcpkg-dir}}\lib&
+          set SCALANATIVE_CI_NO_DEBUG_SYMBOLS=${{matrix.lto == 'full'}}&
+          set SCALANATIVE &
+          sbt ++${{matrix.scala}}
+          tests/test
+          testsExt/test
         shell: cmd
