--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,24 +18,9 @@ jobs:
         scala: [2.13.6, 2.12.15, 2.11.12]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: ./.github/actions/unix-setup-env
         with:
-          java-version: 1.8
-      - name: Calculate binary version
-        run: |
-          version=${{matrix.scala}}
-          echo "binary-version=${version%.*}" >> $GITHUB_ENV
-
-      # Build cache for library dependencies and SBT. Its crucial for performance to always load this cache
-      # We're loading it here, when build, to always have ready cache in the big matrix of runtime tests.
-      # Cache is generated based on Scala binary version on contents of build
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cache/coursier
-            ~/.sbt/boot
-          key: ${{ runner.os }}-deps-${{ env.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+          scala-version: ${{matrix.scala}}
 
       - name: Test tools
         run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" test-tools
@@ -172,26 +157,9 @@ jobs:
             gc: commix
     steps:
       - uses: actions/checkout@v2
-      - name: Calculate binary version
-        run: |
-          version=${{ matrix.scala }}
-          echo "binary-version=${version%.*}" >> $GITHUB_ENV
-
-      # Loads cache with dependencies created in test-tools job
-      - name: Cache dependencies
-        uses: actions/cache@v2
+      - uses: ./.github/actions/unix-setup-env
         with:
-          path: |
-            ~/.cache/coursier
-            ~/.sbt/boot
-          key: ${{ runner.os }}-deps-${{ env.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-
-      # Loads cached content of local docker registry containing built images.
-      - name: Cache docker
-        uses: actions/cache@v1
-        with:
-          path: /tmp/docker-registry
-          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}
+          scala-version: ${{matrix.scala}}
 
       - name: Run tests
         env:
@@ -222,32 +190,49 @@ jobs:
             build-mode: release-fast
     steps:
       - uses: actions/checkout@v2
-      - name: Calculate binary version
-        run: |
-          version=${{ matrix.scala }}
-          echo "binary-version=${version%.*}" >> $GITHUB_ENV
-
-      # Loads cache with dependencies created in test-tools job
-      - name: Cache dependencies
-        uses: actions/cache@v2
+      - uses: ./.github/actions/unix-setup-env
         with:
-          path: |
-            ~/.cache/coursier
-            ~/.sbt/boot
-          key: ${{ runner.os }}-deps-${{ env.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-
-      # Loads cached content of local docker registry containing built images.
-      - name: Cache docker
-        uses: actions/cache@v1
-        with:
-          path: /tmp/docker-registry
-          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}
+          scala-version: ${{matrix.scala}}
 
       - name: Run tests
         env:
           SCALANATIVE_MODE: ${{ matrix.build-mode }}
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: false
+          SCALA_VERSION: ${{ matrix.scala}}
+          TEST_COMMAND: test-runtime
+        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+
+  test-runtime-lto:
+    name: Test runtime with lto
+    runs-on: ubuntu-18.04
+    needs: [tests-tools, build-image]
+    strategy:
+      fail-fast: false
+      matrix:
+        scala: [2.13.6, 2.12.15, 2.11.12]
+        lto: [thin]
+        optimize: [true]
+        include:
+          - scala: 2.13.6
+            lto: full
+            optimize: true
+          - scala: 2.12.15
+            lto: full
+            optimize: false
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/unix-setup-env
+        with:
+          scala-version: ${{matrix.scala}}
+
+      - name: Run tests
+        env:
+          SCALANATIVE_MODE: release-fast
+          SCALANATIVE_GC: immix
+          SCALANATIVE_OPTIMIZE: ${{matrix.optimize}}
+          SCALANATIVE_LTO: ${{matrix.lto}}
           SCALA_VERSION: ${{ matrix.scala}}
           TEST_COMMAND: test-runtime
         run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
@@ -264,26 +249,9 @@ jobs:
         scala: [2.12.15]
     steps:
       - uses: actions/checkout@v2
-      - name: Calculate binary version
-        run: |
-          version=${{ matrix.scala }}
-          echo "binary-version=${version%.*}" >> $GITHUB_ENV
-
-      # Loads cache with dependencies created in test-tools job
-      - name: Cache dependencies
-        uses: actions/cache@v2
+      - uses: ./.github/actions/unix-setup-env
         with:
-          path: |
-            ~/.cache/coursier
-            ~/.sbt/boot
-          key: ${{ runner.os }}-deps-${{ env.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-
-      # Loads cached content of local docker registry containing built images.
-      - name: Cache docker
-        uses: actions/cache@v1
-        with:
-          path: /tmp/docker-registry
-          key: docker-registry-${{ hashFiles('ci-docker/Dockerfile') }}
+          scala-version: ${{matrix.scala}}
 
       - name: Run tests
         env:
