Fix typos in the CI workflow after rebase

--- a/.github/actions/windows-setup-env/action.yml
+++ b/.github/actions/windows-setup-env/action.yml
@@ -6,7 +6,7 @@ inputs:
     required: true
 outputs:
   vcpkg-dir:
-    description: "Directory containing "
+    description: "Directory containing installed libraries"
     value: ${{steps.resolve-env.outputs.VcpkgLibs}}
 runs:
   using: "composite"
