--- a/.github/workflows/run-tests-windows.yml
+++ b/.github/workflows/run-tests-windows.yml
@@ -1,4 +1,4 @@
-name: Windows tests
+name: Run tests Windows
 on:
   pull_request:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run-tests:
-    name: Run tests
+    name: Test runtime
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
@@ -53,7 +53,7 @@ jobs:
         shell: cmd
 
   run-scripted-tests:
-    name: Run scripted tests
+    name: Scripted tests
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
@@ -71,7 +71,7 @@ jobs:
         shell: cmd
 
   test-runtime-lto:
-    name: Test runtime with LTO
+    name: Test LTO
     runs-on: windows-2019
     strategy:
       fail-fast: false
