Minimalize scope of runtime tests matrix

--- a/.github/workflows/run-tests-macos.yml
+++ b/.github/workflows/run-tests-macos.yml
@@ -14,7 +14,15 @@ jobs:
       matrix:
         os: [macos-10.15]
         scala: [2.13.6, 2.12.15, 2.11.12]
-        gc: [none, boehm, immix, commix]
+        gc: [immix]
+        include:
+          - scala: 2.13.6
+            gc: commix
+          - scala: 2.12.15
+            gc: boehm
+          - scala: 2.11.12
+            gc: none
+
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/macos-setup-env
