--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,12 +3,15 @@
 # settings is preferred over adding especially as
 # the Scala language evolves and styles change.
 # Test upgrades: $ scripts/scalafmt --test 2> diff.txt
-version = "3.0.0-RC6"
+version = "3.0.6"
 docstrings.style = AsteriskSpace
 project.git = true
 project.excludePaths = [
-  "glob:**/scalalib/**"
+  "glob:**/scalalib/**",
+  "glob:**/scalalib3/**"
 ]
+# Default runner.dialect is deprecated now, needs to be explicitly set
+runner.dialect = scala213
 # This creates less of a diff but is not default
 # but is more aligned with Scala.js syntax.
 newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
@@ -24,4 +27,9 @@ rewriteTokens = {
   "⇒": "=>"
   "→": "->"
   "←": "<-"
+}
+fileOverride {
+  "glob:**/src/**/scala-3/**" {
+     runner.dialect = scala3
+  }
 }
