--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -261,3 +261,30 @@ jobs:
           SCALA_VERSION: ${{ matrix.scala}}
           TEST_COMMAND: test-scripted
         run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
+
+  test-scala3:
+    name: Test experimental Scala3 runtime
+    runs-on: ubuntu-18.04
+    # Scala3 is treated as experimental, ignore if job fails
+    continue-on-error: true
+    needs: [tests-tools, build-image]
+    strategy:
+      fail-fast: false
+      matrix:
+        scala: [3.1.0]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/linux-setup-env
+        with:
+          scala-version: ${{matrix.scala}}
+      # Make sure that scalalib (for Scala 2) is published
+      - name: Publish dependencies
+        run: bash scripts/publish-local
+      - name: Run tests
+        env:
+          SCALANATIVE_MODE: release-fast
+          SCALANATIVE_GC: immix
+          SCALANATIVE_OPTIMIZE: true
+          SCALA_VERSION: ${{ matrix.scala}}
+          TEST_COMMAND: sandbox3/run
+        run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
