--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-# Assume default UNIX end line character.
-# It's needed to correctly apply patches in scalalib
-/scalalib/* text eol=lf
+# Ensure that UNIX end line encoding is used in this repo, it is crucial due to
+# the problems with appling patches in scalalib on Windows
+* text=auto
+*.scala eol=lf
+*.scala.patch eol=lf
