Update github actions CI

--- a/.github/workflows/run-tests-linux.yml
+++ b/.github/workflows/run-tests-linux.yml
@@ -4,7 +4,10 @@ on:
   push:
     branches:
       - master
-
+concurrency: 
+  group: linux-${{ github.head_ref }}
+  cancel-in-progress: true
+  
 jobs:
   # Compile all sources for given Scala version
   # Cache external dependencies
@@ -23,7 +26,7 @@ jobs:
           scala-version: ${{matrix.scala}}
 
       - name: Test tools
-        run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" test-tools
+        run: sbt "++ ${{ matrix.scala }} -v" "-no-colors" "-J-Xmx3G" "test-tools ${{ matrix.scala }}"
 
         # Make sure that Scala partest blacklisted tests contain only valid test names
       - name: Setup Ammonite
@@ -32,13 +35,13 @@ jobs:
           ammonite-version: 2.3.8
           scala-version: 2.13
         env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: "true"
 
       - name: Check partest disabled tests list
         run: |
           sbt "++ ${{ matrix.scala }} -v" \
           "-no-colors" \
-          "scalaPartest/fetchScalaSource"
+          "scalaPartest${{env.project-version}}/fetchScalaSource"
           amm scripts/partest-check-files.sc ${{ matrix.scala }}
 
         # Running all partests would take ~2h for each Scala version, run only single test of each kind
@@ -48,7 +51,7 @@ jobs:
           sbt "++ ${{ matrix.scala }} -v" \
           "-no-colors" \
           "-J-Xmx3G" \
-          "scalaPartestTests/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
+          "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
 
   # Build testing image that would be used to build and run against different platforms
   # Currently only Linux x64 is tested
@@ -59,7 +62,7 @@ jobs:
       image-name: ${{ steps.build-image.outputs.image-base-name }}
     strategy:
       matrix:
-        arch: [ amd64 ]
+        arch: [amd64]
 
     steps:
       - uses: actions/checkout@v2
@@ -116,8 +119,8 @@ jobs:
       fail-fast: false
       matrix:
         scala: [2.13.7, 2.12.15, 2.11.12]
-        build-mode: [ debug , release-fast ]
-        gc: [ boehm, immix, commix ]
+        build-mode: [debug, release-fast]
+        gc: [boehm, immix, commix]
         # Create holes in grid to lower number of tests.
         # Excluded entries should have low impact on overall project coverage
         exclude:
@@ -173,7 +176,7 @@ jobs:
           SCALANATIVE_GC: ${{ matrix.gc }}
           SCALANATIVE_OPTIMIZE: true
           SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: test-runtime
+          TEST_COMMAND: "test-runtime ${{ matrix.scala }}"
         run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
 
   # This job is basically copy-paste of test-runtime.
@@ -185,8 +188,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scala: [ 2.13.7, 2.12.15, 2.11.12 ]
-        build-mode: [ debug, release-fast ]
+        scala: [2.13.7, 2.12.15, 2.11.12]
+        build-mode: [debug, release-fast]
         include:
           - scala: 2.12.13
             build-mode: release-fast
@@ -208,7 +211,7 @@ jobs:
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: false
           SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: test-runtime
+          TEST_COMMAND: "test-runtime ${{ matrix.scala }}"
         run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
 
   test-runtime-lto:
@@ -242,7 +245,7 @@ jobs:
           SCALANATIVE_OPTIMIZE: ${{matrix.optimize}}
           SCALANATIVE_LTO: ${{matrix.lto}}
           SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: test-runtime
+          TEST_COMMAND: "test-runtime ${{ matrix.scala }}"
         run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
 
   # This job is basically copy-paste of test-runtime.
@@ -267,5 +270,5 @@ jobs:
           SCALANATIVE_GC: immix
           SCALANATIVE_OPTIMIZE: true
           SCALA_VERSION: ${{ matrix.scala}}
-          TEST_COMMAND: test-scripted
+          TEST_COMMAND: "test-scripted ${{matrix.scala}}"
         run: ./ci-docker/run-test-gha.sh "${{ needs.build-image.outputs.image-name }}-amd64"
