--- a/.github/actions/linux-setup-env/action.yml
+++ b/.github/actions/linux-setup-env/action.yml
@@ -11,7 +11,9 @@ runs:
       shell: bash
       run: |
         version=${{ inputs.scala-version }}
-        echo "binary-version=${version%.*}" >> $GITHUB_ENV
+        binaryVersion=${version%.*}
+        echo "binary-version=${binaryVersion}" >> $GITHUB_ENV
+        echo "project-version=${binaryVersion/./_}" >> $GITHUB_ENV
 
     # Loads cache with dependencies created in test-tools job
     - name: Cache dependencies
