--- a/.github/actions/windows-setup-env/action.yml
+++ b/.github/actions/windows-setup-env/action.yml
@@ -36,6 +36,7 @@ runs:
         echo "::set-output name=LocalAppData::${env:LocalAppData}"
         echo "::set-output name=UserProfile::${env:UserProfile}"
         echo "::set-output name=VcpkgLibs::${env:VCPKG_INSTALLATION_ROOT}\installed\x64-windows-static"
+        echo ("project-version=" + ("${{inputs.scala-version}}".Split(".")[0, 1] -join "_")) >> $env:GITHUB_ENV
 
     - name: Cache dependencies
       id: cache-deps
