--- a/.github/workflows/run-tests-macos.yml
+++ b/.github/workflows/run-tests-macos.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - master
+concurrency: 
+  group: macOS-${{ github.head_ref }}
+  cancel-in-progress: true
+
 
 jobs:
   run-tests:
@@ -33,8 +37,12 @@ jobs:
         run: >
           export SCALANATIVE_GC=${{matrix.gc}} &&
           sbt ++${{matrix.scala}}
-          test-runtime
-          "scalaPartestTests/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
+          "test-runtime ${{matrix.scala}}"
+
+      - name: Test partests infrastructure
+        run: >
+          sbt ++${{matrix.scala}}
+          "scalaPartestTests${{env.project-version}}/testOnly -- --showDiff neg/abstract.scala pos/abstract.scala run/Course-2002-01.scala"
 
   run-scripted-tests:
     name: Scripted tests
@@ -50,4 +58,4 @@ jobs:
           scala-version: ${{matrix.scala}}
 
       - name: Test scripted
-        run: sbt "++${{matrix.scala}};test-scripted"
+        run: sbt "test-scripted ${{matrix.scala}}"
